# navbot_ros

./: CMakeLists.txt  Dockerfile  README.md  build_and_run.sh  entrypoint.sh  map1.yaml  package.xml  requirements.txt
arduino/: robot_arduino_code.ino
config/: navbot.rviz  slam_toolbox_params.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/navbot_ros/lib/navbot_ros/: lidar_marker_node.py  lidar_ros_node.py  logger.py  odom_tf_publisher.py  path_publisher.py  plot_odometry.py  publish_guides.py  robot_ros_node.py
launch/: bringup.launch.xml  bringup_ekf.launch.xml  bringup_particle_filter.launch.xml  bringup_slam.launch.xml
log/: latest_build
map/: map1.pgm
navbot_ros/: .gitignore  CMakeLists.txt  extended_kalman_filter.py  motion_models.py  package.xml  parameters.py  particle_filter.py  robot.py  robot_python_code.py
navbot_ros/config/: navbot.rviz
navbot_ros/launch/: bringup_ekf.launch.xml  bringup_pf.launch.xml  bringup_slam.launch.xml
navbot_ros/map/: map_processed.yaml
navbot_ros/maps/: map_processing.py
navbot_ros/maps/map1/: map.yaml
navbot_ros/navbot_ros/: camera_estimator.py  data_handling.py  particle_filter.py
navbot_ros/scripts/: check_pf_bag_diagnostics.py  lidar_marker_node.py  odom_tf_publisher.py  path_publisher.py  plot_odom_l4.py  plot_pf_particles.py  robot_ros_node.py
robot_arduino_code/: robot_arduino_code.ino
scripts/: compute_Q.py  controller_test.py  lidar_ros_node.py  logger.py  plot_odometry.py  publish_guides.py  robot_ros_node.py  straight.py  test.py
(+38 files in other folders)
